fixed layout and styling issues that were on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,6 @@ h2.sm-heading,
 h3.sm-heading {
   margin-bottom: 2rem;
   padding: 0.2rem 1rem;
-  background: rgba(191, 199, 207, 0.911);
 }
 h4.lg-heading {
   font-size: 2rem;
@@ -172,7 +171,7 @@ main#home h1 {
 }
 .boxes div {
   font-size: 2rem;
-  border: 3px white solid;
+  border: 3px rgb(205, 212, 219) solid;
   padding: 1.5rem 2.5rem;
   margin-bottom: 3rem;
 }
@@ -217,6 +216,11 @@ main#home h1 {
   color: white;
   height: 60px;
 }
+.sepSec {
+  background: rgb(255, 255, 255);
+  padding: 2rem;
+  margin: 1rem 0.3rem 2rem 0.3rem;
+}
 
 @media screen and (min-width: 1171px) {
   .projects {
@@ -238,6 +242,10 @@ main#home h1 {
   main .lg-heading {
     line-height: 1;
     margin-bottom: 1rem;
+    font-size: 4rem;
+  }
+  h4.lg-heading {
+    font-size: 2rem;
   }
   ul.menu-nav,
   div.menu-branding {
@@ -268,7 +276,7 @@ main#home h1 {
     grid-template-columns: 1fr;
   }
   .projects {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
   }
 }
 
@@ -277,11 +285,14 @@ main#home h1 {
     padding: 2rem;
   }
   main #home h1 {
-    margin-top: 10vh;
+    margin-top: 5vh;
   }
   main .lg-heading {
     margin-top: 1rem;
-    font-size: 5rem;
+    font-size: 4rem;
+  }
+  h4.lg-heading {
+    font-size: 2rem;
   }
   .projects {
     grid-template-columns: 1fr;
